work in progress on css website refactor with removal useless selectors and adding to support for RTL / LTR for multi language umbraco version

--- a/MessiahSolutionsComFrontEnd/Views/home.cshtml
+++ b/MessiahSolutionsComFrontEnd/Views/home.cshtml
@@ -142,7 +142,7 @@
                             <div class="gallery-item title-inside-gallery-item gallery-item-fullwidth">
                                 <div class="gallery-item-image">
                                     <figure>
-                                        <img src="images/title-inside-gallery-01-640x430.jpg" alt="" width="640" height="430" />
+                                        <img src="/images/title-inside-gallery-01-640x430.jpg" alt="" width="640" height="430" />
                                     </figure>
                                     <div class="title-inside-gallery-caption">
                                         <a class="title-inside-gallery-title" href="single-project.html">Eric Howard</a>
@@ -155,7 +155,7 @@
                             <div class="gallery-item title-inside-gallery-item gallery-item-fullwidth">
                                 <div class="gallery-item-image">
                                     <figure>
-                                        <img src="images/title-inside-gallery-02-640x430.jpg" alt="" width="640" height="430" />
+                                        <img src="/images/title-inside-gallery-02-640x430.jpg" alt="" width="640" height="430" />
                                     </figure>
                                     <div class="title-inside-gallery-caption">
                                         <a class="title-inside-gallery-title" href="single-project.html">Basketball Team</a>
@@ -168,7 +168,7 @@
                             <div class="gallery-item title-inside-gallery-item gallery-item-fullwidth">
                                 <div class="gallery-item-image">
                                     <figure>
-                                        <img src="images/title-inside-gallery-03-640x430.jpg" alt="" width="640" height="430" />
+                                        <img src="/images/title-inside-gallery-03-640x430.jpg" alt="" width="640" height="430" />
                                     </figure>
                                     <div class="title-inside-gallery-caption">
                                         <a class="title-inside-gallery-title" href="single-project.html">Political Candidate</a>
@@ -181,7 +181,7 @@
                             <div class="gallery-item title-inside-gallery-item gallery-item-fullwidth">
                                 <div class="gallery-item-image">
                                     <figure>
-                                        <img src="images/title-inside-gallery-04-640x430.jpg" alt="" width="640" height="430" />
+                                        <img src="/images/title-inside-gallery-04-640x430.jpg" alt="" width="640" height="430" />
                                     </figure>
                                     <div class="title-inside-gallery-caption">
                                         <a class="title-inside-gallery-title" href="single-project.html">Industrial Company</a>
@@ -194,7 +194,7 @@
                             <div class="gallery-item title-inside-gallery-item gallery-item-fullwidth">
                                 <div class="gallery-item-image">
                                     <figure>
-                                        <img src="images/title-inside-gallery-05-640x430.jpg" alt="" width="640" height="430" />
+                                        <img src="/images/title-inside-gallery-05-640x430.jpg" alt="" width="640" height="430" />
                                     </figure>
                                     <div class="title-inside-gallery-caption">
                                         <a class="title-inside-gallery-title" href="single-project.html">Construction Company</a>
@@ -207,7 +207,7 @@
                             <div class="gallery-item title-inside-gallery-item gallery-item-fullwidth">
                                 <div class="gallery-item-image">
                                     <figure>
-                                        <img src="images/title-inside-gallery-06-640x430.jpg" alt="" width="640" height="430" />
+                                        <img src="/images/title-inside-gallery-06-640x430.jpg" alt="" width="640" height="430" />
                                     </figure>
                                     <div class="title-inside-gallery-caption">
                                         <a class="title-inside-gallery-title" href="single-project.html">Boxing Club</a>
@@ -232,7 +232,7 @@
                 <div class="team-classic">
                     <div class="team-classic-image">
                         <figure>
-                            <img src="images/team-01-270x270.jpg" alt="" width="270" height="270" />
+                            <img src="/images/team-01-270x270.jpg" alt="" width="270" height="270" />
                         </figure>
                         <div class="team-classic-image-caption">
                             <ul class="list-inline list-team">
@@ -252,7 +252,7 @@
                 <div class="team-classic">
                     <div class="team-classic-image">
                         <figure>
-                            <img src="images/team-02-270x270.jpg" alt="" width="270" height="270" />
+                            <img src="/images/team-02-270x270.jpg" alt="" width="270" height="270" />
                         </figure>
                         <div class="team-classic-image-caption">
                             <ul class="list-inline list-team">
@@ -272,7 +272,7 @@
                 <div class="team-classic">
                     <div class="team-classic-image">
                         <figure>
-                            <img src="images/team-03-270x270.jpg" alt="" width="270" height="270" />
+                            <img src="/images/team-03-270x270.jpg" alt="" width="270" height="270" />
                         </figure>
                         <div class="team-classic-image-caption">
                             <ul class="list-inline list-team">
@@ -292,7 +292,7 @@
                 <div class="team-classic">
                     <div class="team-classic-image">
                         <figure>
-                            <img src="images/team-04-270x270.jpg" alt="" width="270" height="270" />
+                            <img src="/images/team-04-270x270.jpg" alt="" width="270" height="270" />
                         </figure>
                         <div class="team-classic-image-caption">
                             <ul class="list-inline list-team">
@@ -312,7 +312,7 @@
                 <div class="team-classic">
                     <div class="team-classic-image">
                         <figure>
-                            <img src="images/team-05-270x270.jpg" alt="" width="270" height="270" />
+                            <img src="/images/team-05-270x270.jpg" alt="" width="270" height="270" />
                         </figure>
                         <div class="team-classic-image-caption">
                             <ul class="list-inline list-team">
@@ -332,7 +332,7 @@
                 <div class="team-classic">
                     <div class="team-classic-image">
                         <figure>
-                            <img src="images/team-06-270x270.jpg" alt="" width="270" height="270" />
+                            <img src="/images/team-06-270x270.jpg" alt="" width="270" height="270" />
                         </figure>
                         <div class="team-classic-image-caption">
                             <ul class="list-inline list-team">
