downloaded google fonts and css file to project for inspection and bundling * link = https://fonts.googleapis.com/css?family=Raleway:200,400%7CLato:300,400,300italic,700%7CMontserrat:900

--- a/MessiahSolutionsComFrontEnd/Views/master.cshtml
+++ b/MessiahSolutionsComFrontEnd/Views/master.cshtml
@@ -30,7 +30,7 @@
 
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <!-- Stylesheets-->
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway:200,400%7CLato:300,400,300italic,700%7CMontserrat:900">
+    <link rel="stylesheet" type="text/css" href="/css/fonts-googleapis-com-css-family=Raleway200400Lato300400300italic700Montserrat900.css">
 
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/style.css">
