--- a/MessiahSolutionsComFrontEnd/Views/home.cshtml
+++ b/MessiahSolutionsComFrontEnd/Views/home.cshtml
@@ -9,6 +9,7 @@
     var HomeCallToActionUrl = Model.HeroCtalink.Url;
     var HomePageLinkToServices = Model.ServicesLink.Url;
     var HomePageLinkToProjects = Model.OurProjectsLink.Url;
+    var HomePageLinkToOurTeam = Model.OurTeamLink.Url;
 }
 
 @*<section class="section section--full-height background-image-full overlay overlay--dark section--content-center section--thick-border"
@@ -171,9 +172,6 @@
     </div>
 
     <div class="isotope-wrap row row-50">
-
-
-
         <!-- Isotope Filters-->
         <div class="col-xl-12">
             <ul class="isotope-filters isotope-filters-horizontal">
@@ -226,83 +224,83 @@
                     }
 
                     @*<div class="col-12 col-md-6 col-lg-4 isotope-item" data-filter="type 1">
-                        <div class="gallery-item title-inside-gallery-item gallery-item-fullwidth">
-                            <div class="gallery-item-image">
-                                <figure>
-                                    <img src="/images/title-inside-gallery-01-640x430.jpg" alt="" width="640" height="430" />
-                                </figure>
-                                <div class="title-inside-gallery-caption">
-                                    <a class="title-inside-gallery-title" href="single-project.html">Eric Howard</a>
-                                    <p class="title-inside-gallery-text">Our qualified team is ready to design, develop, and support your website.</p>
+                            <div class="gallery-item title-inside-gallery-item gallery-item-fullwidth">
+                                <div class="gallery-item-image">
+                                    <figure>
+                                        <img src="/images/title-inside-gallery-01-640x430.jpg" alt="" width="640" height="430" />
+                                    </figure>
+                                    <div class="title-inside-gallery-caption">
+                                        <a class="title-inside-gallery-title" href="single-project.html">Eric Howard</a>
+                                        <p class="title-inside-gallery-text">Our qualified team is ready to design, develop, and support your website.</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-4 isotope-item" data-filter="type 1">
-                        <div class="gallery-item title-inside-gallery-item gallery-item-fullwidth">
-                            <div class="gallery-item-image">
-                                <figure>
-                                    <img src="/images/title-inside-gallery-02-640x430.jpg" alt="" width="640" height="430" />
-                                </figure>
-                                <div class="title-inside-gallery-caption">
-                                    <a class="title-inside-gallery-title" href="single-project.html">Basketball Team</a>
-                                    <p class="title-inside-gallery-text">Our qualified team is ready to design, develop, and support your website.</p>
+                        <div class="col-12 col-md-6 col-lg-4 isotope-item" data-filter="type 1">
+                            <div class="gallery-item title-inside-gallery-item gallery-item-fullwidth">
+                                <div class="gallery-item-image">
+                                    <figure>
+                                        <img src="/images/title-inside-gallery-02-640x430.jpg" alt="" width="640" height="430" />
+                                    </figure>
+                                    <div class="title-inside-gallery-caption">
+                                        <a class="title-inside-gallery-title" href="single-project.html">Basketball Team</a>
+                                        <p class="title-inside-gallery-text">Our qualified team is ready to design, develop, and support your website.</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-4 isotope-item" data-filter="type 1">
-                        <div class="gallery-item title-inside-gallery-item gallery-item-fullwidth">
-                            <div class="gallery-item-image">
-                                <figure>
-                                    <img src="/images/title-inside-gallery-03-640x430.jpg" alt="" width="640" height="430" />
-                                </figure>
-                                <div class="title-inside-gallery-caption">
-                                    <a class="title-inside-gallery-title" href="single-project.html">Political Candidate</a>
-                                    <p class="title-inside-gallery-text">Our qualified team is ready to design, develop, and support your website.</p>
+                        <div class="col-12 col-md-6 col-lg-4 isotope-item" data-filter="type 1">
+                            <div class="gallery-item title-inside-gallery-item gallery-item-fullwidth">
+                                <div class="gallery-item-image">
+                                    <figure>
+                                        <img src="/images/title-inside-gallery-03-640x430.jpg" alt="" width="640" height="430" />
+                                    </figure>
+                                    <div class="title-inside-gallery-caption">
+                                        <a class="title-inside-gallery-title" href="single-project.html">Political Candidate</a>
+                                        <p class="title-inside-gallery-text">Our qualified team is ready to design, develop, and support your website.</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-4 isotope-item" data-filter="type 2">
-                        <div class="gallery-item title-inside-gallery-item gallery-item-fullwidth">
-                            <div class="gallery-item-image">
-                                <figure>
-                                    <img src="/images/title-inside-gallery-04-640x430.jpg" alt="" width="640" height="430" />
-                                </figure>
-                                <div class="title-inside-gallery-caption">
-                                    <a class="title-inside-gallery-title" href="single-project.html">Industrial Company</a>
-                                    <p class="title-inside-gallery-text">Our qualified team is ready to design, develop, and support your website.</p>
+                        <div class="col-12 col-md-6 col-lg-4 isotope-item" data-filter="type 2">
+                            <div class="gallery-item title-inside-gallery-item gallery-item-fullwidth">
+                                <div class="gallery-item-image">
+                                    <figure>
+                                        <img src="/images/title-inside-gallery-04-640x430.jpg" alt="" width="640" height="430" />
+                                    </figure>
+                                    <div class="title-inside-gallery-caption">
+                                        <a class="title-inside-gallery-title" href="single-project.html">Industrial Company</a>
+                                        <p class="title-inside-gallery-text">Our qualified team is ready to design, develop, and support your website.</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-4 isotope-item" data-filter="type 2">
-                        <div class="gallery-item title-inside-gallery-item gallery-item-fullwidth">
-                            <div class="gallery-item-image">
-                                <figure>
-                                    <img src="/images/title-inside-gallery-05-640x430.jpg" alt="" width="640" height="430" />
-                                </figure>
-                                <div class="title-inside-gallery-caption">
-                                    <a class="title-inside-gallery-title" href="single-project.html">Construction Company</a>
-                                    <p class="title-inside-gallery-text">Our qualified team is ready to design, develop, and support your website.</p>
+                        <div class="col-12 col-md-6 col-lg-4 isotope-item" data-filter="type 2">
+                            <div class="gallery-item title-inside-gallery-item gallery-item-fullwidth">
+                                <div class="gallery-item-image">
+                                    <figure>
+                                        <img src="/images/title-inside-gallery-05-640x430.jpg" alt="" width="640" height="430" />
+                                    </figure>
+                                    <div class="title-inside-gallery-caption">
+                                        <a class="title-inside-gallery-title" href="single-project.html">Construction Company</a>
+                                        <p class="title-inside-gallery-text">Our qualified team is ready to design, develop, and support your website.</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-4 isotope-item" data-filter="type 2">
-                        <div class="gallery-item title-inside-gallery-item gallery-item-fullwidth">
-                            <div class="gallery-item-image">
-                                <figure>
-                                    <img src="/images/title-inside-gallery-06-640x430.jpg" alt="" width="640" height="430" />
-                                </figure>
-                                <div class="title-inside-gallery-caption">
-                                    <a class="title-inside-gallery-title" href="single-project.html">Boxing Club</a>
-                                    <p class="title-inside-gallery-text">Our qualified team is ready to design, develop, and support your website.</p>
+                        <div class="col-12 col-md-6 col-lg-4 isotope-item" data-filter="type 2">
+                            <div class="gallery-item title-inside-gallery-item gallery-item-fullwidth">
+                                <div class="gallery-item-image">
+                                    <figure>
+                                        <img src="/images/title-inside-gallery-06-640x430.jpg" alt="" width="640" height="430" />
+                                    </figure>
+                                    <div class="title-inside-gallery-caption">
+                                        <a class="title-inside-gallery-title" href="single-project.html">Boxing Club</a>
+                                        <p class="title-inside-gallery-text">Our qualified team is ready to design, develop, and support your website.</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>*@
+                        </div>*@
                 </div>
             </div>
         </div>
@@ -312,10 +310,68 @@
 <!-- Our Team-->
 <section class="section section-lg bg-default text-center">
     <div class="container container-wide">
-        <h3>Our Team</h3>
-        <hr class="divider divider-default">
+        <div class="text-center">
+            <a href="@HomePageLinkToOurTeam" class="animated-title-divider">
+                <h3>
+                    @Model.GetProperty("ourTeamTitle").Value()
+                </h3>
+                <div class="divider divider-default"></div>
+            </a>
+        </div>
         <!-- Owl Carousel-->
         <div class="owl-carousel owl-carousel-team" data-autoplay="true" data-items="1" data-md-items="2" data-lg-items="3" data-xl-items="4" data-xxl-items="6" data-stage-padding="0" data-loop="true" data-margin="30" data-mouse-drag="false" data-dots="true">
+
+            @if (Model.FeaturedPeople != null)
+            {
+                var personImageUrl = "";
+                var personContactEmail = "";
+
+                foreach (var person in Model.FeaturedPeople)
+                {
+                    personImageUrl = person.Value<IPublishedContent>("photo")?.Url ?? "";
+                    personContactEmail = person.GetProperty("email").Value()?.ToString() ?? "";
+                    if (!string.IsNullOrEmpty(personContactEmail)) {
+                        personContactEmail = "mailto:" + personContactEmail;
+                    }
+
+                    <div class="team-classic">
+                        <div class="team-classic-image">
+                            <figure>
+                                <img src="@personImageUrl" alt="" width="270" height="270" />
+                            </figure>
+                            <div class="team-classic-image-caption">
+                                <ul class="list-inline list-team">
+                                    @if (person.GetProperty("facebookUsername").Value() != null && !string.IsNullOrEmpty(person.GetProperty("facebookUsername").Value().ToString()))
+                                    {
+                                        <li><a class="icon icon-sm-bigger icon-white mdi mdi-facebook" target="_blank" href="@person.GetProperty("facebookUsername").Value().ToString()"></a></li>
+                                    }
+                                    @if (person.GetProperty("twitterUsername").Value() != null && !string.IsNullOrEmpty(person.GetProperty("twitterUsername").Value().ToString()))
+                                    {
+                                        <li><a class="icon icon-sm-bigger icon-white mdi mdi-twitter" target="_blank" href="@person.GetProperty("twitterUsername").Value()"></a></li>
+                                    }
+                                    @if (person.GetProperty("instagramUsername").Value() != null && !string.IsNullOrEmpty(person.GetProperty("instagramUsername").Value().ToString()))
+                                    {
+                                        <li><a class="icon icon-sm-bigger icon-white mdi mdi-instagram" target="_blank" href="@person.GetProperty("instagramUsername").Value()"></a></li>
+                                    }
+                                    @if (person.GetProperty("linkedInUsername").Value() != null && !string.IsNullOrEmpty(person.GetProperty("linkedInUsername").Value().ToString()))
+                                    {
+                                        <li><a class="icon icon-sm-bigger icon-white mdi mdi-linkedin" target="_blank" href="@person.GetProperty("linkedInUsername").Value()"></a></li>
+                                    }
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="team-classic-caption">
+                            <h5><a class="team-classic-title" href="@person.Url()">@person.GetProperty("fullName").Value()</a></h5>
+                            <p class="team-classic-job-position">@person.GetProperty("jobTitle").Value()</p>
+                            <a class="button button-xs button-default-outline" target="_blank" href="@personContactEmail">get in touch</a>
+                        </div>
+                    </div>
+                }
+            }
+
+        </div>
+
+        @*<div class="owl-carousel owl-carousel-team" data-autoplay="true" data-items="1" data-md-items="2" data-lg-items="3" data-xl-items="4" data-xxl-items="6" data-stage-padding="0" data-loop="true" data-margin="30" data-mouse-drag="false" data-dots="true">
             <div class="team-classic">
                 <div class="team-classic-image">
                     <figure>
@@ -406,7 +462,6 @@
                             <li><a class="icon icon-sm-bigger icon-white mdi mdi-facebook" href="#"></a></li>
                             <li><a class="icon icon-sm-bigger icon-white mdi mdi-twitter" href="#"></a></li>
                             <li><a class="icon icon-sm-bigger icon-white mdi mdi-instagram" href="#"></a></li>
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-google-plus" href="#"></a></li>
                             <li><a class="icon icon-sm-bigger icon-white mdi mdi-linkedin" href="#"></a></li>
                         </ul>
                     </div>
@@ -426,7 +481,6 @@
                             <li><a class="icon icon-sm-bigger icon-white mdi mdi-facebook" href="#"></a></li>
                             <li><a class="icon icon-sm-bigger icon-white mdi mdi-twitter" href="#"></a></li>
                             <li><a class="icon icon-sm-bigger icon-white mdi mdi-instagram" href="#"></a></li>
-                            <li><a class="icon icon-sm-bigger icon-white mdi mdi-google-plus" href="#"></a></li>
                             <li><a class="icon icon-sm-bigger icon-white mdi mdi-linkedin" href="#"></a></li>
                         </ul>
                     </div>
@@ -436,7 +490,8 @@
                     <p class="team-classic-job-position">Designer</p><a class="button button-xs button-default-outline" href="about-me.html">get in touch</a>
                 </div>
             </div>
-        </div><a class="button button-primary" href="about-us.html">view all team</a>
+        </div>*@
+        <a class="button button-primary" href="@HomePageLinkToOurTeam">@Model.GetProperty("viewAllTeamBottomLinkText").Value()</a>
     </div>
 </section>
 
